--- a/app.wxss
+++ b/app.wxss
@@ -18,7 +18,7 @@ page {
 }
 
 .price {
-  color: #EC5D29;
+  color: #FFA101;
   font-size: 14px;
   font-weight: bold;
 }
@@ -30,7 +30,7 @@ page {
 
 .header-background {
   width: 100%;
-  height: 130px;
+  height: 100px;
 }
 
 .no-look-msg,
@@ -38,4 +38,51 @@ page {
   width: 100%;
   height: 230px;
   margin-top: 40px;
+}
+
+.box-shadow {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
+}
+
+.item-block {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.12), 0 3px 6px rgba(0,0,0,0.12);
+}
+
+.tag {
+  padding: 5px 15px;
+  position: relative;
+  font-size: 12px;
+  border-radius: 5px;
+  display: inline-block;
+  z-index: 1;
+}
+
+.tag-btn {
+  height: 30px;
+  font-size: 12px;
+  line-height: 30px;
+  border-radius: 3px;
+  padding: 0px 10px;
+}
+
+.tag,
+.tag-btn {
+  color:#FFFFFF;
+  background-color: #FFA101;
+  box-shadow: unset;
+  border: none;
+}
+
+.tag-btn.stopped {
+  background: #999999;
+}
+
+.common-ft-color {
+  color: #FFA101 !important;
+}
+
+.common-bg-color {
+  background-color: #FFA101 !important;
+  box-shadow: unset !important;
+  border: none !important;
 }
