--- a/pages/add-address/add-address.wxss
+++ b/pages/add-address/add-address.wxss
@@ -1,6 +1,6 @@
 @import '../choose-address/model/model.wxss';
 
-.add-address-page {
+.add-address-page .input-wrapper {
   padding: 0 15px;  
 }
 
@@ -21,5 +21,4 @@
 .add-address-page .save-btn {
   border: none;
   color: #333;
-  background: #EC5D29;
 }
