--- a/pages/coupon/coupon.wxml
+++ b/pages/coupon/coupon.wxml
@@ -37,6 +37,7 @@
 <view class='container'>
   <i-toast id="toast" />
   <i-spin fix size="large" wx:if="{{spinShow}}"></i-spin>
+  <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
   <view class="coupons-wrapper" wx:if="{{hasUserInfo}}">
     <view class='coupon-block' wx:for="{{coupons}}" wx:key="{{item.id}}">
       <i-row>
@@ -50,7 +51,7 @@
           <view class='description'>{{item.desc}}</view>
         </i-col>
         <i-col span="5" i-class="right">
-          <i-button class="btn-use" bindtap="onUseCoupon" size="small" data-id="{{item}}">立即使用</i-button>
+          <i-button class="btn-use common-bg-color" bindtap="onUseCoupon" size="small" data-id="{{item}}">立即使用</i-button>
         </i-col>
       </i-row>
     </view>
