--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -2,26 +2,26 @@
   <i-toast id="toast" />
   <i-spin fix size="large" wx:if="{{spinShow}}"></i-spin>
   <view class="good-detail">
-    <!-- <swiper indicator-dots="{{indicatorDots}}"
+    <swiper indicator-dots="{{indicatorDots}}"
       autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
       <block wx:for="{{good.swiperImgs}}" wx:key="{{index}}">
         <swiper-item>
           <image src="{{item}}" class="slide-image" />
         </swiper-item>
       </block>
-    </swiper> -->
-    <view class="brand-img">
+    </swiper>
+    <!-- <view class="brand-img">
       <image src="{{good.goodimg}}" class="image" mode="aspectFit" />
-    </view>
-    <view class="detail">
-      <view class="good-tag" wx:if="{{good.isGrabbing}}">正在开抢</view>
+    </view> -->
+    <image src="/public/images/detail_background.png" class='detail-background'></image>
+    <view class="detail box-shadow">
       <p class="brand-name">{{good.name}}</p>
       <i-grid i-class="no-border"><i-grid-item i-class="detail-text">{{good.subtitle}}</i-grid-item></i-grid>
       <view class="btn-row" wx:if="{{!good.isGrabbing}}">
-        <i-button bind:click="handleClick" i-class="status-btn disabled" shape="circle" size="small" disabled>抢购结束</i-button>
+        <i-button i-class="tag-btn disabled" size="small" disabled>抢购结束</i-button>
       </view>
-      <i-grid i-class="no-border" wx:if="{{!good.orderno && good.onlookRecordNo}}">
-        <i-button bind:click="handleClick" i-class="status-btn" shape="circle" size="small">本轮剩余时间</i-button>
+      <i-grid i-class="no-border" wx:if="{{good.isGrabbing}}">
+        <i-button i-class="tag-btn common-bg-color" size="small">正在开抢</i-button>
       </i-grid>
       <view class="left-time" wx:if="{{good.isGrabbing}}">
         <p>
@@ -54,7 +54,7 @@
             商品原价：<span>￥{{good.purchasePrice}}</span>
           </i-grid-item>
           <i-grid-item i-class="param-item">
-            红线价格：<span>￥{{good.redlineprice}}</span>
+            红线价格：<span class="price">￥{{good.redlineprice}}</span>
           </i-grid-item>
         </i-grid>
         <i-grid>
@@ -77,14 +77,15 @@
     </view>
 
     <i-grid i-class="checkout">
-      <i-grid-item>
-        <i-button bind:click="handleCheckoutOriginalPrice" shape="circle" size="small" data-id="{{good.id}}">原价购买</i-button>
+      <i-grid-item i-class='btn-grid'>
+        <i-button i-class='common-bg-color' bind:click="handleCheckoutOriginalPrice" size="small" data-id="{{good.id}}">原价购买</i-button>
       </i-grid-item>
-      <i-grid-item wx:if="{{good.isGrabbing}}">
-        <i-button bind:click="handleCheckoutLookerPrice" shape="circle" size="small" data-id="{{good.id}}">{{good.lookAmount}} 元围观</i-button>
+      <i-grid-item wx:if="{{good.isGrabbing}}" i-class='btn-grid'>
+        <i-button i-class='common-bg-color' bind:click="handleCheckoutLookerPrice" size="small" data-id="{{good.id}}">{{good.lookAmount}} 元围观</i-button>
       </i-grid-item>
-            <i-grid-item wx:if="{{!good.orderno && good.onlookRecordNo}}">
-      <i-button bind:click="handleCheckoutLookerPrice" shape="circle" size="small" data-id="{{good.id}}">抢购</i-button></i-grid-item>
+      <i-grid-item wx:if="{{!good.orderno && good.onlookRecordNo}}" i-class='btn-grid'>
+        <i-button i-class='common-bg-color' bind:click="handleCheckoutLookerPrice" size="small" data-id="{{good.id}}">抢购</i-button>
+      </i-grid-item>
     </i-grid>
     
   </view>
