--- a/pages/help-center/help-center.wxss
+++ b/pages/help-center/help-center.wxss
@@ -5,7 +5,7 @@
 }
 .help .header-bar {
   height: 100px;
-  background: #EC5D29;
+  background: #FFA101;
   text-align: center;
   font-size: 13px;
   padding: 30px;
