--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -27,16 +27,8 @@
   padding: 10px 15px;
 }
 
-.good-tag {
-  padding:5px 15px;
+.items-wrapper .tag {
   margin:-20px 0 0px -12px;
-  color:#FFFFFF;
-  background:#EC5D29;
-  border-radius:5px;
-  font-size:12px;
-  z-index:1;
-  position:relative;
-  display: inline-block;
 }
 
 .item-block {
@@ -45,7 +37,6 @@
   margin: 3%;
   padding: 5px 3%;
   display: inline-block;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.12), 0 2px 4px rgba(0,0,0,0.12);
 }
 
 .item-block.right-one {
@@ -75,12 +66,6 @@
 .item-rows .lowest-row {
   font-size: 11px;
   color: #999999;
-}
-
-.item-rows .price {
-  color: #EC5D29;
-  font-size: 14px;
-  font-weight: bold;
 }
 
 .item-rows .looker-count {
