--- a/pages/order-history/order-history.wxml
+++ b/pages/order-history/order-history.wxml
@@ -1,7 +1,8 @@
-<view class='container order-history'>
+<view class='container'>
   <i-toast id="toast" />
-  <view wx:if="{{hasUserInfo}}">
-    <view class='order-block' wx:for="{{orders}}" wx:key="{{item.id}}">
+  <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
+  <view wx:if="{{hasUserInfo}}" class='order-history'>
+    <view class='order-block box-shadow' wx:for="{{orders}}" wx:key="{{item.id}}">
       <view class='date'>
         <text>{{item.createTime}}</text>
       </view>
