--- a/pages/order-history/order-history.wxss
+++ b/pages/order-history/order-history.wxss
@@ -1,12 +1,12 @@
 /* pages/message/message.wxss */
 .order-history {
-  padding: 0px 15px;
+  padding: 5px 15px;
 }
 
 .order-block {
   font-size: 15px;
   margin: 10px 0;
-  border: 1px solid #eee;
+  /* border: 1px solid #eee; */
 }
 
 .order-block .date {
@@ -14,7 +14,7 @@
   text-align: right;
   font-size: 13px;
   color: #999999;
-  border-bottom: 1px solid #eee; 
+  /* border-bottom: 1px solid #eee; */
 }
 
 .order-block .good {
@@ -42,17 +42,14 @@
   height: 30px;
 }
 
-.order-block .tag-btn {
-  font-size: 11px;
+.order-block .tag {
   margin-top: 10px;
   float: right;
-  color: #ffffff;
-  vertical-align:middle;
+  vertical-align: middle;
 }
 
 .order-block .message {
-  padding: 4px 6px;
+  padding: 5px 10px;
   font-size: 13px;
   color: #999999;
-  border-top: 1px solid #eee; 
 }
