--- a/pages/contact/contact.wxml
+++ b/pages/contact/contact.wxml
@@ -1,7 +1,9 @@
 <!--pages/contact/contact.wxml-->
 <view class='contact'>
-  <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
-  <view class='detail'>
+  <view class='header-wrapper'>
+    <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
+  </view>
+  <view class='content detail'>
     <p class="bold">联系方式</p>
     <p>邮箱：zzrs9731@163.com</p>
   </view>
