--- a/app.wxss
+++ b/app.wxss
@@ -39,9 +39,21 @@ page {
   color: #999999;
 }
 
+.header-wrapper {
+  height: 100px;
+  z-index: 9999;
+  position: fixed;
+  background-color: #f9f9f9;
+  width: 100%;
+}
+.content {
+  margin-top: 105px;
+}
+
 .header-background {
   width: 100%;
   height: 100px;
+  position: fixed;
 }
 
 .no-look-msg,
@@ -60,7 +72,7 @@ page {
 }
 
 .tag {
-  padding: 3px 5px;
+  padding: 4px 5px;
   position: relative;
   font-size: 12px;
   border-radius: 5px;
