--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -1,7 +1,9 @@
 <view class="container address-page">
   <i-toast id="toast" />
+  <view class='header-wrapper'>
   <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
-  <view class='address-wrapper'>
+  </view>
+  <view class='content address-wrapper'>
     <view class='address-block' wx:for="{{addresses}}" wx:key="{{index}}">
     <!-- <view class='left' bindtap="bindBackToOrderTap" data-item="{{item}}">
       <p class="tag-name">{{item.tagName}}</p>
