--- a/pages/cart/cart.wxml
+++ b/pages/cart/cart.wxml
@@ -1,9 +1,10 @@
 <view class='container cart'>
   <i-toast id="toast" />
   <i-spin fix size="large" wx:if="{{spinShow}}"></i-spin>
-  <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
-  
-  <view wx:if="{{hasUserInfo}}">
+  <view class='header-wrapper'>
+    <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
+  </view>
+  <view wx:if="{{hasUserInfo}}" class='content'>
     <view class='orders' wx:if="{{orders.length}}">
       <view class='item-block' wx:for="{{orders}}" wx:key="{{item.id}}" bindtap="bindDetailTap" data-id="{{item}}">
         <view class="tag" wx:if="{{item.status === 0}}">已取消</view>
@@ -23,7 +24,7 @@
         </view>
       </view>
     </view>
-    <view wx:if="{{!orders.length && !spinShow}}">
+    <view wx:if="{{!orders.length && !spinShow}}" class='content'>
       <image src="/public/images/no_look_message.png" class='no-look-msg' mode="aspectFit"></image>
     </view>
   </view>
