--- a/pages/coupon/coupon.wxml
+++ b/pages/coupon/coupon.wxml
@@ -37,8 +37,10 @@
 <view class='container'>
   <i-toast id="toast" />
   <i-spin fix size="large" wx:if="{{spinShow}}"></i-spin>
+  <view class='header-wrapper'>
   <image src="/public/images/header_background.png" class='header-background' mode="scaleToFit"></image>
-  <view class="coupons-wrapper" wx:if="{{hasUserInfo}}">
+  </view>
+  <view class="content coupons-wrapper" wx:if="{{hasUserInfo}}">
     <view class='coupon-block' wx:for="{{coupons}}" wx:key="{{item.id}}">
       <i-row>
         <i-col span="6" i-class="left">
