--- a/pages/guide/guide.wxml
+++ b/pages/guide/guide.wxml
@@ -1,7 +1,4 @@
-<!--pages/guide/guide.wxml-->
-<view class='guide'>
-  <!-- <scroll-view class='contents'>
-    <image lazy-load="true" src='https://www.cnqiangba.com/assets/img/logo-brand.png' mode="widthFix" />
-  </scroll-view> -->
-  <h1>hello world</h1>
+<view class='container'>
+  <import src="../../modules/wxParse/wxParse.wxml"/>
+  <template is="wxParse" data="{{wxParseData:article.nodes}}"/>
 </view>
