--- a/pages/me/me.wxss
+++ b/pages/me/me.wxss
@@ -126,6 +126,10 @@
   text-align: center;
 }
 
+.share-imgs .share-icon-col.hide {
+  display: none
+}
+
 .share-imgs .label {
   display: block;
 }
@@ -137,12 +141,25 @@
   margin-top:3px;
 }
 
+.share-firend-icon {
+  margin: 0;
+  padding: 0;
+  font-size: 12px;
+  line-height:unset;
+  border: none;
+  display: unset;
+}
+
 .share-firend-btn {
   margin: 0;
   padding: 0;
   font-size: 12px;
   line-height:unset;
   border: none;
+}
+
+.share-firend-icon {
+  background-color: #ffffff;
 }
 
 .share-firend-btn:after {
